--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="hero-image">
                 <!-- Replace with your TERN cargo bike hero image -->
-                <img src="images/hero-bike.jpg" alt="TERN Cargo Bike in NYC" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <img src="images/hero-bike.jpg?v=2" alt="Family riding TERN Cargo Bike in NYC" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="image-placeholder bike-hero" style="display: none;">
                     <div class="placeholder-content">
                         <svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
