Add Quick Haul image - woman and child on cargo bike

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <p>Compact yet powerful urban cargo bike</p>
                 </div>
                 <div class="bike-card">
-                    <img src="images/tern-quick-haul.jpg" alt="TERN Quick Haul Cargo Bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/tern-quick-haul.webp" alt="TERN Quick Haul Cargo Bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN Quick Haul<br><small>Add: images/tern-quick-haul.jpg</small></span>
+                        <span>TERN Quick Haul<br><small>Add: images/tern-quick-haul.webp</small></span>
                     </div>
                     <h3>TERN Quick Haul</h3>
                     <p>Lightweight and agile for city commuting</p>
