Complete overhaul: Remove 'cargo' references, use Wombi-inspired design and messaging

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lease a TERN cargo bike in NYC. Starting at $300/month. Flexible subscription plans for urban transportation.">
-    <title>Cargo Bike Leasing NYC | TERN Bikes | from0to2.com</title>
+    <meta name="description" content="E-bike subscription in NYC. Premium TERN e-bikes with all-inclusive service, starting at $300/month. Flexible month-to-month subscriptions.">
+    <title>from0to2 - E-bike Subscription NYC | Premium E-bikes, Created to Carry</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,6 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <!-- Replace with your logo image -->
                 <img src="images/logo.svg" alt="from0to2 Logo" class="logo-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-block';">
                 <span class="logo-text" style="display: none;">from0to2</span>
             </div>
@@ -24,59 +23,98 @@
     <section class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">Lease a Cargo Bike in NYC</h1>
-                <p class="hero-subtitle">Premium TERN cargo bikes. Flexible monthly subscription. No commitment required.</p>
-                <div class="pricing-badge">
-                    <span class="price">Starting at $300<span class="price-period">/month</span></span>
-                </div>
+                <h1 class="hero-title">MAKE EVERY JOURNEY A JOYRIDE</h1>
                 <div class="hero-cta">
-                    <button class="cta-button primary">Start Your Lease</button>
-                    <button class="cta-button secondary">Learn More</button>
+                    <button class="cta-button primary large">Get Started</button>
                 </div>
             </div>
             <div class="hero-image">
-                <!-- Replace with your TERN cargo bike hero image -->
-                <img src="images/hero-bike.jpg?v=2" alt="Family riding TERN Cargo Bike in NYC" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <img src="images/hero-bike.jpg?v=2" alt="Family riding TERN e-bike in NYC" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="image-placeholder bike-hero" style="display: none;">
                     <div class="placeholder-content">
-                        <svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="50" cy="150" r="30" stroke="currentColor" stroke-width="3" fill="none"/>
-                            <circle cx="150" cy="150" r="30" stroke="currentColor" stroke-width="3" fill="none"/>
-                            <path d="M80 150 L120 50 L150 150" stroke="currentColor" stroke-width="3" fill="none"/>
-                            <rect x="100" y="30" width="40" height="20" stroke="currentColor" stroke-width="2" fill="none"/>
-                        </svg>
-                        <p>Hero: TERN Cargo Bike<br><small>Add: images/hero-bike.jpg</small></p>
+                        <p>Hero Image</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Bike Showcase Section -->
+    <!-- Key Features Section -->
+    <section class="features">
+        <div class="container">
+            <div class="features-grid">
+                <div class="feature-item">
+                    <h2>All-inclusive Subscriptions</h2>
+                    <p>Get a premium e-bike, full service, and peace of mind, starting at $300/mo</p>
+                </div>
+                <div class="feature-item">
+                    <h2>Premium E-bikes, Created to Carry</h2>
+                    <p>Offering TERN's industry-leading electric bikes, designed for safety, comfort, and serious carrying power.</p>
+                </div>
+                <div class="feature-item">
+                    <h2>Customize With Accessories</h2>
+                    <p>Make it yours with accessories for school runs, commutes, and weekend adventures.</p>
+                </div>
+                <div class="feature-item">
+                    <h2>Subscription With Flexibility Built In</h2>
+                    <p>Month-to-month with freedom to swap or purchase when you're ready.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Enjoy the Ride Section -->
+    <section class="enjoy-section">
+        <div class="container">
+            <div class="enjoy-content">
+                <h2 class="section-title">Enjoy the ride, we'll take care of the rest.</h2>
+                <p class="section-subtitle">Get your premium e-bike with all-inclusive service—everything you need for easy, flexible riding.</p>
+                <p>Your subscription membership includes theft protection, 24/7 Rider Rescue, and the option to purchase your e-bike when the time is right. Ride with confidence, knowing from0to2 has you covered every mile of the way.</p>
+                <button class="cta-button secondary">Explore Benefits</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Enjoy the Commute Section -->
+    <section class="commute-section">
+        <div class="container">
+            <div class="commute-content">
+                <h2 class="section-title">Enjoy the Commute, without Commitment</h2>
+                <p class="section-subtitle">The flexible subscription and purchase options help adults upgrade their commute and align it with their big life developments, whether it is another puppy, a growing family, or making the trip to the grocery store a little easier.</p>
+                <p>Our electric bikes are house and apartment-friendly with compact sizing and vertical parking capabilities.</p>
+                <p>Subscribing or buying a from0to2 e-bike offers many benefits, including an eco-friendly alternative to cars, limited time in traffic, and no long-term commitments.</p>
+                <button class="cta-button secondary">Explore Benefits</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- E-Bikes Section -->
     <section class="bike-showcase">
         <div class="container">
-            <h2 class="section-title">Premium TERN Cargo Bikes</h2>
+            <h2 class="section-title">E-Bikes</h2>
+            <p class="section-subtitle">Create the perfect setup for your electric bike. Whether you're commuting, carrying kids, hauling groceries, or biking with your pet, our customizable accessories have you covered.</p>
+            <p class="section-subtitle">Our e-bikes and accessories are easy to swap out as needed. When you find the perfect custom mix of e-bike and attachments, you can switch from subscribing to owning. from0to2 bikes and accessories can be purchased together or separately for added convenience.</p>
             <div class="bike-grid">
                 <div class="bike-card">
-                    <img src="images/tern-gsd.jpg" alt="TERN GSD Cargo Bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/tern-gsd.jpg" alt="TERN GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN GSD<br><small>Add: images/tern-gsd.jpg</small></span>
+                        <span>TERN GSD</span>
                     </div>
                     <h3>TERN GSD</h3>
-                    <p>Perfect for families and heavy cargo</p>
+                    <p>Perfect for families and heavy loads</p>
                 </div>
                 <div class="bike-card">
-                    <img src="images/tern-hsd.jpg" alt="TERN HSD Cargo Bike - Woman with dog on waterfront" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/tern-hsd.jpg" alt="TERN HSD E-bike - Woman with dog" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN HSD<br><small>Add: images/tern-hsd.jpg</small></span>
+                        <span>TERN HSD</span>
                     </div>
                     <h3>TERN HSD</h3>
-                    <p>Compact yet powerful urban cargo bike</p>
+                    <p>Compact yet powerful urban e-bike</p>
                 </div>
                 <div class="bike-card">
-                    <img src="images/tern-quick-haul.webp" alt="TERN Quick Haul Cargo Bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/tern-quick-haul.webp" alt="TERN Quick Haul E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN Quick Haul<br><small>Add: images/tern-quick-haul.webp</small></span>
+                        <span>TERN Quick Haul</span>
                     </div>
                     <h3>TERN Quick Haul</h3>
                     <p>Lightweight and agile for city commuting</p>
@@ -85,52 +123,14 @@
         </div>
     </section>
 
-    <!-- Benefits Section -->
-    <section class="benefits">
-        <div class="container">
-            <h2 class="section-title">Why Lease a Cargo Bike?</h2>
-            <div class="benefits-grid">
-                <div class="benefit-card">
-                    <div class="benefit-icon">🚲</div>
-                    <h3>No Upfront Cost</h3>
-                    <p>Start riding immediately without a large initial investment. All maintenance and insurance included.</p>
-                </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">🔄</div>
-                    <h3>Flexible Terms</h3>
-                    <p>Month-to-month flexibility. Upgrade, downgrade, or cancel anytime with no long-term commitment.</p>
-                </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">🛠️</div>
-                    <h3>Full Service Included</h3>
-                    <p>Maintenance, repairs, and insurance all covered. We handle everything so you can just ride.</p>
-                </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">⚡</div>
-                    <h3>Premium Quality</h3>
-                    <p>Ride top-tier TERN cargo bikes designed for urban environments. Built to last, built for NYC.</p>
-                </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">🌱</div>
-                    <h3>Eco-Friendly</h3>
-                    <p>Reduce your carbon footprint while navigating the city efficiently. Sustainable transportation made easy.</p>
-                </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">📦</div>
-                    <h3>Perfect for NYC</h3>
-                    <p>Carry groceries, kids, or cargo through the city streets. Designed for urban living and commuting.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Pricing Section -->
     <section class="pricing">
         <div class="container">
-            <h2 class="section-title">Simple, Transparent Pricing</h2>
+            <h2 class="section-title">All-inclusive Subscriptions</h2>
+            <p class="section-subtitle">Get a premium e-bike, full service, and peace of mind</p>
             <div class="pricing-card">
                 <div class="pricing-header">
-                    <h3>Monthly Lease</h3>
+                    <h3>Monthly Subscription</h3>
                     <div class="price-display">
                         <span class="currency">$</span>
                         <span class="amount">300</span>
@@ -138,47 +138,15 @@
                     </div>
                 </div>
                 <ul class="pricing-features">
-                    <li>✓ Premium TERN cargo bike</li>
-                    <li>✓ Full maintenance included</li>
-                    <li>✓ Insurance coverage</li>
-                    <li>✓ 24/7 roadside assistance</li>
+                    <li>✓ Premium TERN e-bike</li>
+                    <li>✓ All-inclusive service</li>
+                    <li>✓ Theft protection</li>
+                    <li>✓ 24/7 Rider Rescue</li>
                     <li>✓ Free delivery in NYC</li>
-                    <li>✓ No long-term commitment</li>
+                    <li>✓ Month-to-month flexibility</li>
+                    <li>✓ Option to purchase</li>
                 </ul>
                 <button class="cta-button primary full-width">Get Started Today</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Lifestyle/Use Cases Section -->
-    <section class="lifestyle">
-        <div class="container">
-            <h2 class="section-title">Perfect for Every NYC Lifestyle</h2>
-            <div class="lifestyle-grid">
-                <div class="lifestyle-card">
-                    <img src="images/family-commute.jpg" alt="Family commuting with cargo bike" class="lifestyle-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="lifestyle-placeholder" style="display: none;">
-                        <span>Family Commute<br><small>Add: images/family-commute.jpg</small></span>
-                    </div>
-                    <h3>Family Transportation</h3>
-                    <p>Safe and comfortable rides for kids and groceries</p>
-                </div>
-                <div class="lifestyle-card">
-                    <img src="images/urban-delivery.jpg" alt="Urban delivery with cargo bike" class="lifestyle-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="lifestyle-placeholder" style="display: none;">
-                        <span>Urban Delivery<br><small>Add: images/urban-delivery.jpg</small></span>
-                    </div>
-                    <h3>Urban Delivery</h3>
-                    <p>Efficient cargo transport for small businesses</p>
-                </div>
-                <div class="lifestyle-card">
-                    <img src="images/city-commute.jpg" alt="City commuting with cargo bike" class="lifestyle-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="lifestyle-placeholder" style="display: none;">
-                        <span>City Commute<br><small>Add: images/city-commute.jpg</small></span>
-                    </div>
-                    <h3>Daily Commuting</h3>
-                    <p>Navigate NYC streets faster than cars or subways</p>
-                </div>
             </div>
         </div>
     </section>
@@ -186,12 +154,12 @@
     <!-- How It Works -->
     <section class="how-it-works">
         <div class="container">
-            <h2 class="section-title">How It Works</h2>
+            <h2 class="section-title">How Subscription Works</h2>
             <div class="steps">
                 <div class="step">
                     <div class="step-number">1</div>
-                    <h3>Choose Your Bike</h3>
-                    <p>Select from our premium TERN cargo bike selection</p>
+                    <h3>Choose Your E-bike</h3>
+                    <p>Select from our premium TERN e-bike selection</p>
                 </div>
                 <div class="step">
                     <div class="step-number">2</div>
@@ -206,7 +174,7 @@
                 <div class="step">
                     <div class="step-number">4</div>
                     <h3>Start Riding</h3>
-                    <p>Enjoy your cargo bike with full support and service</p>
+                    <p>Enjoy your e-bike with all-inclusive support and service</p>
                 </div>
             </div>
         </div>
@@ -216,8 +184,8 @@
     <section class="cta-section">
         <div class="container">
             <h2>Ready to Get Started?</h2>
-            <p>Join the growing community of NYC cargo bike riders</p>
-            <button class="cta-button primary large">Start Your Lease Now</button>
+            <p>Join the growing community of NYC e-bike riders</p>
+            <button class="cta-button primary large">Get Started</button>
         </div>
     </section>
 
@@ -227,7 +195,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>from0to2</h4>
-                    <p>Cargo bike leasing made simple for NYC</p>
+                    <p>E-bike subscription made simple for NYC</p>
                 </div>
                 <div class="footer-section">
                     <h4>Contact</h4>
