Add new pages (get-started, bike pages), forms with Google Apps Script integration, and update pricing/colors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="E-bike subscription in NYC. Premium TERN e-bikes with all-inclusive service, starting at $300/month. Flexible month-to-month subscriptions.">
+    <meta name="description" content="E-bike subscription in NYC. Premium TERN e-bikes with all-inclusive service, starting at $225/month. Flexible month-to-month subscriptions.">
     <title>from0to2 - E-bike Subscription NYC | Premium E-bikes, Created to Carry</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,7 +15,7 @@
                 <img src="images/logo.svg" alt="from0to2 Logo" class="logo-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-block';">
                 <span class="logo-text" style="display: none;">from0to2</span>
             </div>
-            <button class="cta-button nav-cta">Get Started</button>
+            <a href="get-started.html" class="cta-button nav-cta">Get Started</a>
         </div>
     </nav>
 
@@ -25,7 +25,7 @@
             <div class="hero-content">
                 <h1 class="hero-title">MAKE EVERY JOURNEY A JOYRIDE</h1>
                 <div class="hero-cta">
-                    <button class="cta-button primary large">Get Started</button>
+                    <a href="get-started.html" class="cta-button primary large">Get Started</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -45,7 +45,7 @@
             <div class="features-grid">
                 <div class="feature-item">
                     <h2>All-inclusive Subscriptions</h2>
-                    <p>Get a premium e-bike, full service, and peace of mind, starting at $300/mo</p>
+                    <p>Get a premium e-bike, full service, and peace of mind, starting at $225/mo</p>
                 </div>
                 <div class="feature-item">
                     <h2>Premium E-bikes, Created to Carry</h2>
@@ -70,7 +70,7 @@
                 <h2 class="section-title">Enjoy the ride, we'll take care of the rest.</h2>
                 <p class="section-subtitle">Get your premium e-bike with all-inclusive service—everything you need for easy, flexible riding.</p>
                 <p>Your subscription membership includes theft protection, 24/7 Rider Rescue, and the option to purchase your e-bike when the time is right. Ride with confidence, knowing from0to2 has you covered every mile of the way.</p>
-                <button class="cta-button secondary">Explore Benefits</button>
+                <a href="#subscriptions" class="cta-button secondary">Explore Benefits</a>
             </div>
         </div>
     </section>
@@ -83,7 +83,7 @@
                 <p class="section-subtitle">The flexible subscription and purchase options help adults upgrade their commute and align it with their big life developments, whether it is another puppy, a growing family, or making the trip to the grocery store a little easier.</p>
                 <p>Our electric bikes are house and apartment-friendly with compact sizing and vertical parking capabilities.</p>
                 <p>Subscribing or buying a from0to2 e-bike offers many benefits, including an eco-friendly alternative to cars, limited time in traffic, and no long-term commitments.</p>
-                <button class="cta-button secondary">Explore Benefits</button>
+                <a href="#subscriptions" class="cta-button secondary">Explore Benefits</a>
             </div>
         </div>
     </section>
@@ -95,36 +95,36 @@
             <p class="section-subtitle">Create the perfect setup for your electric bike. Whether you're commuting, carrying kids, hauling groceries, or biking with your pet, our customizable accessories have you covered.</p>
             <p class="section-subtitle">Our e-bikes and accessories are easy to swap out as needed. When you find the perfect custom mix of e-bike and attachments, you can switch from subscribing to owning. from0to2 bikes and accessories can be purchased together or separately for added convenience.</p>
             <div class="bike-grid">
-                <div class="bike-card">
+                <a href="tern-gsd.html" class="bike-card">
                     <img src="images/tern-gsd.jpg" alt="TERN GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
                         <span>TERN GSD</span>
                     </div>
                     <h3>TERN GSD</h3>
                     <p>Perfect for families and heavy loads</p>
-                </div>
-                <div class="bike-card">
+                </a>
+                <a href="tern-hsd.html" class="bike-card">
                     <img src="images/tern-hsd.jpg" alt="TERN HSD E-bike - Woman with dog" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
                         <span>TERN HSD</span>
                     </div>
                     <h3>TERN HSD</h3>
                     <p>Compact yet powerful urban e-bike</p>
-                </div>
-                <div class="bike-card">
+                </a>
+                <a href="tern-quick-haul.html" class="bike-card">
                     <img src="images/tern-quick-haul.webp" alt="TERN Quick Haul E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
                         <span>TERN Quick Haul</span>
                     </div>
                     <h3>TERN Quick Haul</h3>
                     <p>Lightweight and agile for city commuting</p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
 
     <!-- Pricing Section -->
-    <section class="pricing">
+    <section class="pricing" id="subscriptions">
         <div class="container">
             <h2 class="section-title">All-inclusive Subscriptions</h2>
             <p class="section-subtitle">Get a premium e-bike, full service, and peace of mind</p>
@@ -133,12 +133,12 @@
                     <h3>Monthly Subscription</h3>
                     <div class="price-display">
                         <span class="currency">$</span>
-                        <span class="amount">300</span>
+                        <span class="amount">225</span>
                         <span class="period">/month</span>
                     </div>
                 </div>
                 <ul class="pricing-features">
-                    <li>✓ Premium TERN e-bike</li>
+                    <li>✓ Premium e-bike</li>
                     <li>✓ All-inclusive service</li>
                     <li>✓ Theft protection</li>
                     <li>✓ 24/7 Rider Rescue</li>
@@ -146,7 +146,7 @@
                     <li>✓ Month-to-month flexibility</li>
                     <li>✓ Option to purchase</li>
                 </ul>
-                <button class="cta-button primary full-width">Get Started Today</button>
+                <a href="get-started.html" class="cta-button primary full-width">Get Started Today</a>
             </div>
         </div>
     </section>
@@ -185,7 +185,7 @@
         <div class="container">
             <h2>Ready to Get Started?</h2>
             <p>Join the growing community of NYC e-bike riders</p>
-            <button class="cta-button primary large">Get Started</button>
+            <a href="get-started.html" class="cta-button primary large">Get Started</a>
         </div>
     </section>
 
