Update website: remove 24/7 Rider Rescue, redesign badges on images, improve forms, update Google Apps Script URL

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="enjoy-content">
                 <h2 class="section-title">Enjoy the ride, we'll take care of the rest.</h2>
                 <p class="section-subtitle">Get your premium e-bike with all-inclusive service—everything you need for easy, flexible riding.</p>
-                <p>Your subscription membership includes theft protection, 24/7 Rider Rescue, and the option to purchase your e-bike when the time is right. Ride with confidence, knowing from0to2 has you covered every mile of the way.</p>
+                <p>Your subscription membership includes theft protection and the option to purchase your e-bike when the time is right. Ride with confidence, knowing from0to2 has you covered every mile of the way.</p>
                 <a href="#subscriptions" class="cta-button secondary">Explore Benefits</a>
             </div>
         </div>
@@ -141,7 +141,6 @@
                     <li>✓ Premium e-bike</li>
                     <li>✓ All-inclusive service</li>
                     <li>✓ Theft protection</li>
-                    <li>✓ 24/7 Rider Rescue</li>
                     <li>✓ Free delivery in NYC</li>
                     <li>✓ Month-to-month flexibility</li>
                     <li>✓ Option to purchase</li>
