Center badges horizontally on bike images in get-started page

--- a/get-started.html
+++ b/get-started.html
@@ -38,34 +38,40 @@
             <p class="section-subtitle">Select from our premium TERN e-bike selection. All-inclusive subscriptions starting at $225/month.</p>
             <div class="bike-grid">
                 <a href="tern-gsd.html" class="bike-card">
-                    <img src="images/tern-gsd.jpg" alt="TERN GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN GSD</span>
+                    <div class="bike-image-container">
+                        <img src="images/tern-gsd.jpg" alt="TERN GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <span class="available-badge">Available</span>
+                        <div class="bike-image-placeholder" style="display: none;">
+                            <span>TERN GSD</span>
+                        </div>
                     </div>
                     <div style="padding: 1.5rem 1.5rem 0.5rem;">
-                        <span class="available-badge">Available</span>
                         <h3>TERN GSD</h3>
                         <p>Perfect for families and heavy loads</p>
                     </div>
                 </a>
                 <a href="tern-hsd.html" class="bike-card">
-                    <img src="images/tern-hsd.jpg" alt="TERN HSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN HSD</span>
+                    <div class="bike-image-container">
+                        <img src="images/tern-hsd.jpg" alt="TERN HSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="out-of-stock-banner">Out of Stock</div>
+                        <div class="bike-image-placeholder" style="display: none;">
+                            <span>TERN HSD</span>
+                        </div>
                     </div>
                     <div style="padding: 1.5rem 1.5rem 0.5rem;">
-                        <div class="out-of-stock-banner">Out of Stock</div>
                         <h3>TERN HSD</h3>
                         <p>Compact yet powerful urban e-bike</p>
                     </div>
                 </a>
                 <a href="tern-quick-haul.html" class="bike-card">
-                    <img src="images/tern-quick-haul.webp" alt="TERN Quick Haul E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN Quick Haul</span>
+                    <div class="bike-image-container">
+                        <img src="images/tern-quick-haul.webp" alt="TERN Quick Haul E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="out-of-stock-banner">Out of Stock</div>
+                        <div class="bike-image-placeholder" style="display: none;">
+                            <span>TERN Quick Haul</span>
+                        </div>
                     </div>
                     <div style="padding: 1.5rem 1.5rem 0.5rem;">
-                        <div class="out-of-stock-banner">Out of Stock</div>
                         <h3>TERN Quick Haul</h3>
                         <p>Lightweight and agile for city commuting</p>
                     </div>
